# symbols

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cspell.json
.github/workflows/: ci-linux.yml  ci-msys2.yml
doc/: .$NFA.drawio.bkp  .$NFA.drawio.dtmp  NFA.drawio
lib/: CMakeLists.txt
src/: AST.cpp  AST.hpp  CMakeLists.txt  Interpreter.cpp  Interpreter.hpp  LexScanner.cpp  LexScanner.hpp  Parser.cpp  Parser.hpp  ParserLL1.cpp  ParserLL1.hpp  PolynomialForm.cpp  PolynomialForm.hpp  REPL.cpp  REPL.hpp  Scanner.cpp  Scanner.hpp  Simplifier.cpp  Simplifier.hpp  Solver.cpp  Solver.hpp  SymbolTable.cpp  SymbolTable.hpp  Token.hpp  formatters.hpp  main.cpp  mp_t.cpp  mp_t.hpp  multi_precision.cpp  multi_precision.hpp
test/: CMakeLists.txt  TestAST.cpp  TestInterpreter.cpp  TestLexScanner.cpp  TestMultiPrecision.cpp  TestParserLL1.cpp  TestPolynomialForm.cpp  TestScanner.cpp  TestSimplifier.cpp  TestSolver.cpp  Test_mp_t.cpp  assertion_mp.hpp  assertion_mpfr.hpp
